# qrzpal

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  qrzpal.py  requirements.txt
src/: qrzpal.py
