[tool.poetry]
name = "qrzpal"
version = "0.2.0"
description = "QRZ logging shim between WSJT-X and QRZ"
authors = ["Joel Dennison <joel.dennison780@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
watchdog = "^2.1.6"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-black = "^0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
